fix consumer