@@ -3,19 +3,26 @@ package org.sports.config;
 import org.apache.kafka.clients.consumer.ConsumerConfig;
 import org.apache.kafka.clients.consumer.KafkaConsumer;
 import org.apache.kafka.common.serialization.StringDeserializer;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.kafka.core.ConsumerFactory;
+import org.springframework.kafka.core.DefaultKafkaConsumerFactory;
 
-import java.util.Arrays;
-import java.util.Properties;
+import java.util.*;
 
 @Configuration
 public class Kafka {
 
+    @Value(value = "${spring.kafka.bootstrap-servers}")
+    private String bootstrapAddress;
+
+    private static final String groupId = "my-fifth-application";
+
+
     @Bean
     public KafkaConsumer<String, String> kafkaConsumer() {
         String bootstrapServers = "127.0.0.1:9092";
-        String groupId = "my-fifth-application";
         String topic = "demo_java";
 
         // create consumer configs
@@ -30,8 +37,38 @@ public class Kafka {
         KafkaConsumer<String, String> consumer = new KafkaConsumer<>(properties);
 
         // subscribe consumer to our topic(s)
-        consumer.subscribe(Arrays.asList(topic));
+        consumer.subscribe(List.of(topic));
 
         return consumer;
     }
+
+    /**
+    @Bean
+    public ConsumerFactory<String, String> consumerFactory() {
+        Map<String, Object> props = new HashMap<>();
+        props.put(
+                ConsumerConfig.BOOTSTRAP_SERVERS_CONFIG,
+                bootstrapAddress);
+        props.put(
+                ConsumerConfig.GROUP_ID_CONFIG,
+                groupId);
+        props.put(
+                ConsumerConfig.KEY_DESERIALIZER_CLASS_CONFIG,
+                StringDeserializer.class);
+        props.put(
+                ConsumerConfig.VALUE_DESERIALIZER_CLASS_CONFIG,
+                StringDeserializer.class);
+        return new DefaultKafkaConsumerFactory<>(props);
+    }
+
+    @Bean
+    public ConcurrentKafkaListenerContainerFactory<String, String>
+    kafkaListenerContainerFactory() {
+
+        ConcurrentKafkaListenerContainerFactory<String, String> factory =
+                new ConcurrentKafkaListenerContainerFactory<>();
+        factory.setConsumerFactory(consumerFactory());
+        return factory;
+    }
+    **/
 }
